# unamentis-android

./: .editorconfig  .gitignore  .gitmodules  .mcp.json  AGENTS.md  ANDROID_PORT_SPECIFICATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IOS_PARITY_MASTER_PLAN.md  IOS_TYPOGRAPHY_PARITY_SUMMARY.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.claude/hooks/: lint-on-edit.sh  pre-commit-check.sh
.claude/skills/read-external/: SKILL.md  TEMPLATE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/kotlin/com/unamentis/: CiTestConfig.kt  HiltTestRunner.kt  NavigationFlowTest.kt  RetryRule.kt  SkipOnboardingRule.kt
app/src/androidTest/kotlin/com/unamentis/benchmark/: MemoryProfilingTest.kt  SessionBenchmarkTest.kt
app/src/androidTest/kotlin/com/unamentis/data/local/: AppDatabaseTest.kt
app/src/androidTest/kotlin/com/unamentis/data/remote/: CertificatePinningIntegrationTest.kt
app/src/androidTest/kotlin/com/unamentis/ui/analytics/: AnalyticsScreenTest.kt
app/src/androidTest/kotlin/com/unamentis/ui/curriculum/: CurriculumScreenTest.kt
app/src/androidTest/kotlin/com/unamentis/ui/history/: HistoryScreenTest.kt
app/src/androidTest/kotlin/com/unamentis/ui/session/: SessionScreenTest.kt
app/src/androidTest/kotlin/com/unamentis/ui/settings/: SettingsScreenTest.kt
app/src/androidTest/kotlin/com/unamentis/ui/todo/: TodoScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  audio_engine_jni.cpp  glm_asr_decoder.cpp  glm_asr_decoder.h  glm_asr_decoder_jni.cpp  llama_inference.cpp  llama_inference.h  llama_inference_jni.cpp
app/src/main/kotlin/com/unamentis/: MainActivity.kt  UnaMentisApp.kt
app/src/main/kotlin/com/unamentis/core/accessibility/: AccessibilityChecker.kt
app/src/main/kotlin/com/unamentis/core/audio/: AudioEngine.kt  AudioUtils.kt
app/src/main/kotlin/com/unamentis/core/config/: ProviderConfig.kt  ProviderDataStore.kt  ServerConfig.kt  ServerConfigManager.kt  ServerConfigManagerDiscovery.kt
app/src/main/kotlin/com/unamentis/core/curriculum/: CurriculumEngine.kt  UMCFParser.kt
app/src/main/kotlin/com/unamentis/core/device/: DeviceCapabilityDetector.kt  ThermalMonitor.kt
app/src/main/kotlin/com/unamentis/core/discovery/: CachedServerDiscovery.kt  DeviceDiscoveryManager.kt  DiscoveredServer.kt  DiscoveryTier.kt  NsdDiscovery.kt  SubnetScanDiscovery.kt
app/src/main/kotlin/com/unamentis/core/export/: ExportFormat.kt  SessionExporter.kt
app/src/main/kotlin/com/unamentis/core/featureflags/: FeatureFlagCache.kt  FeatureFlagKeys.kt  FeatureFlagService.kt  FeatureFlagTypes.kt
app/src/main/kotlin/com/unamentis/core/fov/: ConfidenceMonitor.kt  ContextSummarizerImpl.kt  FOVContextManager.kt  FOVSessionContextCoordinator.kt  ReadingFOVContextManager.kt
app/src/main/kotlin/com/unamentis/core/health/: ProviderHealthMonitor.kt
app/src/main/kotlin/com/unamentis/core/module/: ModuleModels.kt  ModuleProtocol.kt  ModuleRegistry.kt  ModuleService.kt
app/src/main/kotlin/com/unamentis/core/network/: ConnectivityMonitor.kt
app/src/main/kotlin/com/unamentis/core/readinglist/: HTMLArticleExtractor.kt  MarkdownStripper.kt  ReadingListManager.kt  ReadingTextChunker.kt  WebArticleFetcher.kt
app/src/main/kotlin/com/unamentis/core/session/: MetricsUploadQueue.kt  MetricsUploadService.kt  SessionManager.kt
app/src/main/kotlin/com/unamentis/core/telemetry/: MetricsExporter.kt  TTFAInstrumentation.kt  TelemetryEngine.kt
app/src/main/kotlin/com/unamentis/core/todo/: AutoResumeService.kt  CurriculumSuggestionService.kt  TodoManager.kt
app/src/main/kotlin/com/unamentis/di/: AppModule.kt  CoreModule.kt  DiscoveryModule.kt  KnowledgeBowlDIModule.kt  ProviderModule.kt  ToolsModule.kt
app/src/main/kotlin/com/unamentis/navigation/: DeepLinkHandler.kt  DeepLinkRoutes.kt
app/src/main/kotlin/com/unamentis/service/: NotificationHelper.kt  SessionForegroundService.kt  TodoReminderWorker.kt
app/src/main/kotlin/com/unamentis/shortcuts/: ShortcutsManager.kt
app/src/main/kotlin/com/unamentis/ui/: Navigation.kt
app/src/main/kotlin/com/unamentis/widget/: ProgressWidget.kt  ProgressWidgetReceiver.kt  QuickActionWidget.kt  QuickActionWidgetReceiver.kt  WidgetDataUpdater.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_shortcut_analytics.xml  ic_shortcut_checklist.xml  ic_shortcut_mic.xml  ic_shortcut_play.xml
app/src/main/res/layout/: widget_loading.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: actions.xml  backup_rules.xml  data_extraction_rules.xml  file_paths.xml  progress_widget_info.xml  quick_action_widget_info.xml  shortcuts.xml
app/src/test/kotlin/com/unamentis/helpers/: MockServices.kt  TestDataFactory.kt
app/src/test/kotlin/com/unamentis/navigation/: DeepLinkHandlerTest.kt
config/: detekt.yml
docs/: ANDROID_STYLE_GUIDE.md  ARCHITECTURE.md  CERTIFICATE_PINNING_MAINTENANCE.md  CERTIFICATE_PINNING_PLAN.md  CLIENT_FEATURE_LIST.md  DEV_ENVIRONMENT.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE_BOWL.md  MCP_SETUP.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_PROGRESS.md  PHASE_6_COMPLETION_CHECKLIST.md  PHASE_6_PROGRESS.md  PHYSICAL_DEVICE_SETUP.md  QUICK_START.md  README.md  SESSION_HANDOFF_2026-01-06.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-01-24_i18n_a11y.md  SESSION_SUMMARY_2026-01-25_swipe_actions_i18n.md  SESSION_SUMMARY_CERT_PINNING.md  SESSION_SUMMARY_SPEC_REVIEW.md  SPECIFICATION_COMPLIANCE_REVIEW.md  TASK_STATUS.md  TESTING.md  TESTING_GUIDE.md
docs/ai-ml/: GLM_ASR_IMPLEMENTATION_PLAN.md  GLM_ASR_ON_DEVICE_GUIDE.md
gradle/: libs.versions.toml
scripts/: build.sh  extract-certificate-pins.sh  extract-pins.py  format.sh  health-check.sh  install-emulator.sh  launch-emulator.sh  lint.sh  load-creds.sh  mcp-slack.sh  mcp-trello.sh  test-all.sh  test-quick.sh
(+336 files in other folders)
